tests/trybuild/typed_query_fail_numeric_contains.stderr
error[E0599]: no method named `contains` found for struct `QueryNumericField<Q, V>` in the current scope
 --> tests/trybuild/typed_query_fail_numeric_contains.rs:6:46
  |
6 |     let _ = client.classes().collection_id().contains("7");
  |                                              ^^^^^^^^ method not found in `QueryNumericField<hubuum_client::blocking::Resource<hubuum_client::Class>, CollectionId>`
